fixed spelling error

--- a/spring/ai/homework/written/Hw1/0616110_HW1.tex
+++ b/spring/ai/homework/written/Hw1/0616110_HW1.tex
@@ -12,7 +12,7 @@
 \maketitle
 \section{For the two videos shown in our first class(one on Robot Mouse Races, and the other one Robothespian)
 , describe their respective PEAS.}
-PEAS is an acronyn for \textbf{P}erformance Measure, \textbf{E}nvironment, \textbf{A}ctuators, and
+PEAS is an acronym for \textbf{P}erformance Measure, \textbf{E}nvironment, \textbf{A}ctuators, and
 \textbf{S}ensors. These are 5 elements of a rational agent. A \textbf{performance measure} 
 refers to the question:
 How do we measure whether an agent is performing well? This will determine what factors need to be changed
